# mangobrain

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  mangobrain.toml  pyproject.toml  requirements.txt
agents/: mem-manager.md  verifier.md
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: AlertsPanel.tsx  DistributionCharts.tsx  GlobalHeader.tsx  GraphView.tsx  MemoryDialog.tsx  MemoryTable.tsx  ProjectSelector.tsx  RecentExtractions.tsx  Sidebar.tsx  StatsCards.tsx
dashboard/src/context/: ProjectContext.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Graph.tsx  Guide.tsx  Memories.tsx  Monitoring.tsx  Overview.tsx  Remember.tsx  Setup.tsx
dashboard/src/types/: index.ts
dashboard_dist/: index.html
dashboard_dist/assets/: index-BbuZdLxa.js  index-DABz1x2d.css  index-DmI5d2FU.css  index-ZAQQhvq_.js  index-pdsNF5vY.js
prompts/init/: 02-code-base.md  03-event-base.md
prompts/reference/: memory-definition.md
rules/: mangobrain-remember.md  mangobrain-workflow.md
server/: __main__.py  api_routes.py  cli.py  config.py  database.py  decay.py  embeddings.py  graph.py  jsonl_parser.py  main.py  mangobrain.default.toml  mcp_tools.py  models.py  retrieval.py
server/agents/: analyzer.md  executor.md  mem-manager.md  verifier.md
server/dashboard_dist/: index.html
server/dashboard_dist/assets/: index-AKgK2KX_.js  index-B-fMIXcE.js  index-B2dCBdj5.js  index-BV-wf4Ea.js  index-BaQejTOA.css  index-C9E5pXFt.css  index-CExSotOf.js  index-DBK6AGTf.js  index-DhkRDUcM.js  index-DlCOyfs-.js  index-DojB8F-G.js  index-DukvU8UD.css
server/prompts/init/: 01-doc-base.md  02-code-base.md  03-event-base.md  04-chat-base.md  05-elaborate-base.md
server/prompts/reference/: memory-definition.md
server/rules/: mangobrain-remember.md  mangobrain-workflow.md
server/skills/brain-init/: SKILL.md
server/skills/discuss/: SKILL.md
server/skills/elaborate/: SKILL.md
server/skills/health-check/: SKILL.md
server/skills/init/: SKILL.md
server/skills/memorize/: SKILL.md
server/skills/smoke-test/: SKILL.md
server/skills/task/: SKILL.md
server/work/agents/: creator.md  mem-manager.md  researcher.md  reviewer.md
server/work/prompts/: init-work.md  memory-definition.md
server/work/rules/: mangobrain-remember-work.md  mangobrain-workflow-work.md
server/work/skills/brain-init-work/: SKILL.md
server/work/skills/brief/: SKILL.md
server/work/skills/create/: SKILL.md
server/work/skills/elaborate-work/: SKILL.md
server/work/skills/health-check-work/: SKILL.md
server/work/skills/memorize-work/: SKILL.md
server/work/skills/smoke-test-work/: SKILL.md
server/work/templates/: CLAUDE.md
server/work/templates/rules/: audience.md  brand.md  channels.md  product.md  strategy.md  tone.md
skills/smoke-test/: SKILL.md
tests/: test_core.py  test_init.py  test_phase2.py  test_setup.py
